/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';

package kyuubi.grpc;

option java_multiple_files = true;
option java_package = "org.apache.kyuubi.grpc.proto";
option go_package = "internal/generated";

message TestOpenSessionRequest {
  string user_id = 1;
  string session_id = 2;
}

message TestAddRequest {
  string user_id = 1;
  string session_id = 2;
  string operation_id = 3;
  int64 first_num = 4;
  int64 second_num = 5;
}

message TestOpenSessionResponse {
  string session_id = 1;
  string server_side_session_id = 2;
  string session_info = 3;
}

message TestAddResponse {
  string session_id = 1;
  string server_side_session_id = 2;
  string operation_id = 3;
  int64 result = 4;
}

service GrpcTestService {
  rpc TestOpenSession(TestOpenSessionRequest) returns (TestOpenSessionResponse) {}

  rpc TestAdd(TestAddRequest) returns (TestAddResponse) {}

}